[package]
name = "twatch-isr"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-hal = { version = "0.33" }
esp-idf-sys = { version = "0.30", features = ["binstart"] }
esp-idf-svc = { version = "0.37.2" }
esp-idf-isr = { git = "https://github.com/pyaillet/esp-idf-isr.git" }
embedded-svc = { version = "0.17.3" }
embedded-hal = { version = "0.2.7" }
log = { version = "0.4" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
